<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_coursenotice">

    <fragment
        android:id="@+id/navigation_coursenotice"
        android:name="com.example.WhuLife.ui.location.LocationFragment"
        android:label="@string/title_coursenotice"
        tools:layout="@layout/fragment_coursenotice" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_location" />
    </fragment>

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.WhuLife.ui.coursenotice.CourseNoticeFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.WhuLife.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_packages"
            app:destination="@id/navigation_subscription" />
    </fragment>
		
	<fragment
        android:id="@+id/navigation_subscription"
        android:name="com.example.WhuLife.ui.subscription.SubscriptionFragment"
        android:label="@string/title_subscription"
        tools:layout="@layout/fragment_subscription" />
</navigation>